# faq_search_assistant

./: README.md  markdown-renderer.js  pyproject.toml  simple_test.py  test_complete_flow.py  test_keyword_matching.py  test_matching.py
src/faq_search_assistant/: app.py  chatbot.html  test_ollama.py
src/faq_search_assistant/data/: avoiding_scams_faqs.json  charity_faqs.json  draws_and_payments_faqs.json  faqs.json  getting_in_touch.json  lottery_odds_faqs.json  making_changes_faqs.json  prizes_faqs.json  refer_a_friend_faqs.json  reviews_faqs.json  signing_up_faqs.json  winning_cash_faqs.json
