[project]
name = "faq-search-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "Brian Booth", email = "brian.booth@postcodelottery.co.uk"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"  # <-- allow 3.11 now
dependencies = ["fastapi[all] (>=0.128.0,<0.129.0)"]

[tool.poetry]
packages = [{include = "faq_search_assistant", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
boto3 = "^1.42"
sentence-transformers = "^2.2.2"
langchain = "^0.1.0"
chromadb = "^0.4.0"
